Add design patterns Add twitter api
